# academy-BTG

./: .bandit  .env.example  .gitignore  Dockerfile  conf.py  docker-compose.yml  docs  main.py  mypy.ini  pyproject.toml  requirements.txt  streamlit_app.py
.github/: dependabot.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: api_keys.json  openapi.json
grafana/: dashboard.json
scripts/: agendar_coleta.py  backup_db.py  benchmark.py  deploy.sh  export_openapi.py  health_check.py
src/: __init__.py  config.py
src/agents/: documentos.py  gestor.py  reagente.py  reflexivo.py  state.py
src/analytics/: __init__.py  anomalies.py  backtest.py  clustering.py  export_excel.py  matching.py  normalizacao.py  relatorio.py  score.py  score_ml.py  score_xgb.py  sentiment.py
src/api/: app.py  auth.py  logging_config.py  metrics.py  middleware.py
src/collectors/: __init__.py  anbima.py  base.py  bcb_collector.py  benchmark_anbima.py  cvm.py  fallback.py  pipeline.py  platforms.py  rating_agencies.py  ri_empresas.py  securitizadoras.py
src/db/: alembic.ini  cache.py  engine.py  models.py  retention.py
src/enrichers/: rating_enricher.py
src/extractors/: ocr.py  prospecto.py  structured.py
src/models/: __init__.py  extracted.py  raw.py
src/notifiers/: multi_channel.py  profile_alerts.py  slack.py  (+2 more)
tests/: test_analytics.py  test_anbima.py  test_api.py  test_bcb.py  test_clustering.py  test_collectors.py  test_collectors_mock.py  test_gestor.py  test_graphrag.py  test_integracao.py  test_matching.py  test_normalizacao.py  test_notifiers.py  test_pipeline.py  test_score.py
(+13 files in other folders)
