[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "btg-intelligence"
version = "0.6.0"
description = "Pipeline de inteligencia para ofertas primarias de renda fixa"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-groq>=1.0.0",
    "langgraph>=0.2.0",
    "httpx>=0.27.0",
    "playwright>=1.44.0",
    "polars>=0.20.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=3.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=21.0",
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "fpdf2>=2.7.0",
    "PyMuPDF>=1.24.0",
    "pdfplumber>=0.11.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "prometheus-client>=0.20.0",
    "slack-sdk>=3.30.0",
    "openpyxl>=3.1.0",
    "joblib>=1.3.0",
]

[project.scripts]
btg-collect = "main:cli_entry"
btg-api = "uvicorn src.api.app:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:asyncio:",
    "ignore::DeprecationWarning:pytest_asyncio:",
    "ignore::DeprecationWarning:langgraph:",
]
markers = [
    "slow: marks tests as slow",
    "asyncio: async test",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "F403", "F401", "E741"]
